<resources>

    <string name="app_name">Authorization</string>
    <string name="logo">poifox</string>
    <string name="preamble">Find the best place in town</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="remember_data">Keep me logged in</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="recover_password">Recover here.</string>
    <string name="empty_field">Empty email or password field</string>
    <string name="wrong_email">Wrong email</string>
    <string name="successful">Successful</string>
    <string name="wrong_data">Wrong email or password</string>
    <string name="not_equal_passwords">Passwords aren\'t equal</string>
    <string name="log_out">Log out</string>
    <string name="news">NEWS</string>
    <string name="first_menu_item">article</string>
    <string name="second_menu_item">blog</string>
    <string name="third_menu_item">report</string>
    <string name="history">history</string>
    <string name="home">home</string>
    <string name="bookmarks">bookmarks</string>
    <string name="profile">profile</string>
    <string name="search">Search..</string>
    <string name="exit">Press once again to exit!</string>
    <string name="go_to_site">Go to Site</string>
    <string name="google">Google</string>

</resources>