<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/vIvLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/fox" />
    </FrameLayout>



    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/vTvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logo"
            android:fontFamily="@font/font_logo"
            android:textStyle="bold"
            android:textSize="42sp"
            android:textColor="@color/white">


        </TextView>


    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/preamble"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:fontFamily="@font/preamble_font">


    </TextView>

    <View
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey">

    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/white"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            >

        </TextView>

    </LinearLayout>

</LinearLayout>




